# site-deploy

./: .env.example  .gitignore  AGENTS.md  CNAME  Cargo.toml  DEPLOY.md  Makefile  README.md  daily.html  index.html  inventory.ini.old  old.env
backend/: README.md  alembic.ini  pyproject.toml
backend/config/: denylist_urls.txt  sources.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_init.py  002_timeseries_topics_graphql.py
backend/src/mspmetro_backend/: app.py  cli.py  config.py  db.py  graphql_api.py  ingest.py  models.py  seed.py  source_config.py  static_build.py  text_clean.py
cables/: .gitignore  CODEX_READY_MD_TO_PDF.md  Makefile  STRICT_SPEC.md  requirements.txt
credits/: index.html
daily/: index.html
data/: discovered_tc_blogs.json  discovered_tc_blogs_checked.json  tc_blog_seeds_blogs.txt  tc_blog_seeds_filtered.txt  tc_blogs_with_feeds.txt  twin_cities_blog_seeds.txt
docs/: data-model.md
events/: index.html
featured/: featured.md  index.html
how-we-know/: index.html
metro/: index.html
migrations/: 001_init.sql
neighbors/: index.html
scripts/: build_site.sh  discover_sources.py  do_cdn.py  do_origin_do_bind_domain.sh  do_world_bind_domain.sh  edge_puller_setup.sh  health_check.sh  issue_scw_dns01_cert.sh  publish_s3.py  publish_to_minio.sh  publish_to_minio_over_ssh.sh  publisher_requirements.txt  serve_local.sh  source_publish_hourly.sh  sources_report.py  verify_origins.sh  verify_public.sh  vps_setup.sh
src/: main.rs
tests/: puller_smoke.rs
transit/: index.html
ui/: Cargo.toml
ui/src/: main.rs
(+112 files in other folders)
